# ShinRakuda

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.ja.md  README.md  README_ja.md  config.yaml  config_small.yaml  config_template.yaml  config_validator.py  constants.py  evaluate_llm.py  pyproject.toml  requirements.txt  vllm_memory_test.py
configs/: config_swallow.yaml
datasets/: ELYZA-tasks-100.jsonl  japanese_mt_bench.jsonl  rakuda_v1.jsonl
rakuda/: helper.py  rakuda.py
workflows/: main.yml
